Made modal vertically centre; Fixed misalignment of input fields in custom size field; Modified onSubmit for custom-size form

--- a/src/assets/sass/components/_customsizechart.scss
+++ b/src/assets/sass/components/_customsizechart.scss
@@ -19,7 +19,6 @@
     background-color: #fff;
     align-items: flex-start;
     position: relative;
-    margin-bottom: 20px;
     padding-bottom: 20px;
     padding-top: 96px;
   }
@@ -64,7 +63,7 @@
         outline: none;
         border: none;
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-        margin: 0 10px;
+        margin-left: auto;
         width: 100px;
         text-align: center;
       }
