--- a/src/assets/sass/components/_sizechart.scss
+++ b/src/assets/sass/components/_sizechart.scss
@@ -19,7 +19,6 @@
     background-color: #fff;
     align-items: flex-start;
     position: relative;
-    margin-bottom: 20px;
     padding-bottom: 20px;
     padding-top: 96px;
 
